# pg_turbovec

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  META.json.in  README.md  RELEASING.md  build.rs  pg_turbovec.control
.forgejo/workflows/: release.yml  test.yml
.githooks/: pre-push
.github/workflows/: test.yml
.pi/skills/drift-check/: SKILL.md
.pi/skills/long-running-bench/: SKILL.md
.woodpecker/: ci.yaml
bench/: concurrent.sh
bench/scripts/: profile_warm_scan.sh
bench/scripts/lib/: with-heartbeat.sh
bench/sql/: knn_query.sql  phase_l_cold_scan.sql  phase_n_b_crash_recovery.sql
benches/: allowlist_crossover.rs  concurrent_knn.rs  distance.rs  recall.rs  recall_vs_pgvector.rs
benches/results/: allowlist_crossover_floki_v1_13_0_20260617.json  assign_dups_probes_pareto_2026-06-18.json  cohere_wiki_10m_v1_7_1_2026_05_27.json  colbert_f1_gate_floki_scifact_20260617.json  colbert_f2_confirm_floki_nfcorpus_20260618.json  concurrent_knn_20260523T211637Z.json  concurrent_knn_inproc_mutex_20260523T212553Z.json  concurrent_knn_inproc_nolock_20260523T212651Z.json  ivf_frontier_arnold_cohere-wiki_2026-06-16.json  ivf_recall_vs_probes_2026-06-16.json  ivf_warmp50_floki_avx2_2026-06-16.json  latency_frontier_arnold_cohere_1m_v1_9_0_2026_06_15.json  oversample_recall_curve_2026_06_15.json  phase_w_2_validate_meh_10m_2026_05_27.json  phase_w_2_warm_sanity_meh_10m_2026_05_27.json  phase_w_validate_meh_10m_2026_05_27.json  phase_w_warm_sanity_meh_10m_2026_05_27.json  profile_v1_4_0_symbols.txt  profile_warm_v1_3_0_2026_05_25.json  profile_warm_v1_3_0_2026_05_25.symbols.txt  recall_2026_05_21.json  recall_dbpedia_1M_2026_05_24.json  recall_lat_million_2026_05_24.json  recall_lat_million_inmem_load_2026_05_24.json  recall_lat_million_post_cache_2026_05_24.json  recall_lat_million_release_v1_0_0.json  recall_relfile_cold_scan_v1_3_0_2026_05_25.cold.tsv  recall_relfile_cold_scan_v1_3_0_2026_05_25.json  recall_relfile_cold_scan_v1_3_0_2026_05_25.warm.tsv  recall_relfile_phase_p_cold_scan_2026_05_25.cold.tsv  recall_relfile_phase_p_cold_scan_2026_05_25.json  recall_vs_pgvector_2026_05_23.json  recall_vs_pgvector_2026_05_23_kernel.json  recall_warm_meh_10m_v1_5_1_2026_05_26.csv  recall_warm_meh_10m_v1_5_1_2026_05_26.json  recall_warm_meh_v1_5_0_2026_05_26.json  recall_warm_phase_r3_2026_05_25.json  recall_warm_rv_100k_v1_6_0_2026_05_27.json  searchk_recall_frontier_2026-06-18.json  u2_meh_tv_4bit_warm_mmap_off.tsv  (+6 more)
benches/results/g0_20260703/: g0_hnsw_gist1m.json  g0_hnsw_sift1m.json  g0_ivf_gist1m.json  g0_ivf_sift1m.json  g0_ivf_syn5m.json
benches/results/g2d_20260709/: g2d_driver.py  g2d_hnsw_syn5m.json  g2d_ivf_syn5m.json
benches/results/q1_real_20260711/: cohere1024_flat_b2.json  cohere1024_flat_b4.json  cohere1024_ivf_L4096_b4_INCOMPLETE.json  dbpedia1536_flat_b2.json  dbpedia1536_ivf_L1024_b2.json  dbpedia1536_ivf_L1024_hiprobe.json
benches/results/qdrant_annbench_20260709/: README.md
benches/results/vchord_20260708/: leg3_diskann_gist1m.json  leg3_diskann_sift1m.json  (+8 more)
benches/scripts/: MILLION_ROW_BENCH.md  README.md  bench_million_setup.sql  build_tv_dbpedia.sh  concurrent.sh  download_dbpedia.py  emit_dbpedia_json.py  gt_dbpedia.sh  load_dbpedia_1M.py  migrate_index_v1_4_0.sh  poll-heartbeat.sh  prepare_glove_fixture.py  profile_warm_scan.sh  rebuild_corpus_million.sh  run_bench_sweep_million.sh  run_dbpedia_sweep.sh  run_recall_vs_pgvector.py  warm_phase_r3.sh  warm_phase_r3_clock.sh
benches/sql/: phase_l_cold_scan.sql  phase_n_b_crash_recovery.sql
ci/: announce.sh
docs/: ARCHITECTURE.md  BENCHMARKS.md  BUFFER_CACHE_ONLY_DESIGN.md  BUILDING.md  CI.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_LANDSCAPE_2026-06.md  CONCURRENCY.md  DRIFT_REPORT_2026-05-24.md  FILTERING.md  HYBRID_SEARCH.md  INDEXAM.md  IVF_PLAN.md  MIGRATING_FROM_PGVECTOR.md  PARITY_GAPS.md  PG_VERSION_SUPPORT.md  PHASE19_PROGRESS.md  PHASE_B_OUT_OF_CORE.md  PHASE_F_COLBERT_PLAN.md  PHASE_L_PROGRESS.md  PHASE_P_PROGRESS.md  PHASE_Q_BRIEF.md  PHASE_U_DIAGNOSIS.md  PHASE_W_PROGRESS.md  PRODUCTION.md  PROFILING.md  RECALL.md  ROADMAP_BEAT_COMPETITORS.md  ROADMAP_DECISIONS.md  TESTING.md  TIER1_IVF_LATENCY_PLAN.md  UPGRADING.md  USAGE.md
migrations/: 001_pg_turbovec_v0.1.0.sql  002_pg_turbovec_v0.2.0.sql  003_pg_turbovec_v0.4.0.sql  004_pg_turbovec_v0.5.0.sql  005_pg_turbovec_v1.3.0.sql  006_pg_turbovec_v1.5.0.sql  007_pg_turbovec_v1.6.0.sql  008_pg_turbovec_v1.6.1.sql  009_pg_turbovec_v1.7.0.sql  010_pg_turbovec_v1.7.1.sql  011_pg_turbovec_v1.7.2.sql  012_pg_turbovec_v1.7.3.sql  013_pg_turbovec_v1.8.0.sql  014_pg_turbovec_v1.9.0.sql  015_pg_turbovec_v1.9.1.sql  016_pg_turbovec_v1.10.0.sql  017_pg_turbovec_v1.10.1.sql  018_pg_turbovec_v1.11.0.sql  019_pg_turbovec_v1.11.1.sql  020_pg_turbovec_v1.12.0.sql  021_pg_turbovec_v1.13.0.sql  022_pg_turbovec_v1.13.1.sql  023_pg_turbovec_v1.14.0.sql  024_pg_turbovec_v1.15.0.sql  025_pg_turbovec_v1.15.1.sql  026_pg_turbovec_v1.16.0.sql  027_pg_turbovec_v1.17.0.sql  028_pg_turbovec_v1.17.1.sql  029_pg_turbovec_v1.18.0.sql  030_pg_turbovec_v1.19.0.sql  031_pg_turbovec_v1.20.0.sql  032_pg_turbovec_v1.20.1.sql  033_pg_turbovec_v1.21.0.sql  034_pg_turbovec_v1.22.0.sql  035_pg_turbovec_v1.22.1.sql  036_pg_turbovec_v1.22.2.sql  037_pg_turbovec_v1.23.0.sql  038_pg_turbovec_v1.24.0.sql  039_pg_turbovec_v1.25.0.sql  040_pg_turbovec_v1.25.1.sql  (+5 more)
scripts/: compile-matrix.sh  drift-check.sh  install-forgejo-runner.sh  install-hooks.sh  make-dist.sh
src/: aggregate.rs  bitvec.rs  cache.rs  cast.rs  colbert.rs  distance.rs  extras.rs  guc.rs  halfvec.rs  halfvec_ops.rs  hybrid.rs  kernels.rs  knn.rs  lib.rs  normalize.rs  phase2_knn.rs  sparsevec.rs  sparsevec_ops.rs  tvector.rs  vec.rs  xact.rs
src/index/: build.rs  build_pool.rs  cost.rs  graph.rs  insert.rs  ivf.rs  mmap_static.rs  mod.rs  options.rs  page.rs  persist.rs  relfile.rs  scan.rs  vacuum.rs  validate.rs
tests/: 01_type_basic.sql  02_index_am.sql  03_full_demo.sql
upstream-pr/: 01-lib-rs.diff  02-io-rs.diff  03-id_map-rs.diff  README.md  issue-70-narrowing-comment.md
(+86 files in other folders)
