[package]
name = "pg_turbovec"
description = "PostgreSQL extension: vector index backed by the TurboQuant quantizer (turbovec)"
version = "0.12.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["Greg Burd <greg@burd.me>"]
license = "Apache-2.0"
repository = "https://codeberg.org/gregburd/pg_turbovec"
readme = "README.md"
keywords = ["postgresql", "pgrx", "vector", "ann", "quantization"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_turbovec"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16", "experimental_index_am"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []
# Cargo feature gating the `turbovec` index access method (Rust
# IndexAmRoutine + opclasses + side-table storage). Default-on as
# of v0.9 (was experimental v0.4..v0.8). Build without it for a
# smaller .so when the AM isn't needed:
#   cargo build --no-default-features --features pg16
experimental_index_am = []

[dependencies]
pgrx = "=0.17.0"
turbovec = "0.5"
once_cell = "1.20"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
libc = "0.2"

[dev-dependencies]
pgrx-tests = "=0.17.0"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "plotters"] }

[[bench]]
name = "distance"
harness = false

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
similar_names = "allow"
missing_safety_doc = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
unsafe_derive_deserialize = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
